--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Enterprise</title>
     <link rel="icon" type="image/x-icon" href="asset/images/Logo.svg"/>
-    <link rel="stylesheet" href="asset/css/open.css">
+    <link rel="stylesheet" href="asset/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet"></head>
