--- a/index.html
+++ b/index.html
@@ -4,45 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open Enterprise</title>
-    <link rel="icon" type="image/x-icon" href="asset/images/Logo.svg"/>
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="icon" type="image/x-icon" href="./asset/images/Logo.svg"/>
+    <link rel="stylesheet" href="./asset/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet"></head>
 <body>
-     <!-- <nav id="first-div">
-		<div id="first-child">
-			<img src="asset/images/Logo.svg" alt="logo" id="logo">
-			<p id="OE">
-				Open Enterprise
-			</p>
-		</div>
-		<ul id="Second-child">
-			<li class="hideOnMobile"><a href="">Why Open Enterprise</a></li>
-        <li class="hideOnMobile"><a href="">Features</a></li>
-        <li class="hideOnMobile"><a href="">Contribute</a></li>
-        <li class="hideOnMobile" id="last-li-child" ><a href="">Request early access</a></li>
-			<li onclick="showSidebar()" class="menu"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></li>
-		</ul>
-	</nav>
-	<nav id="sideBar">
-		<li onclick="hideSidebar()"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></li>
- 			<a href="">
-				<li>Why Open Enterprise</li>
-			</a>
-			<a href="">
-				<li>Features</li>
-			</a>
-			<a href="">
-				<li>Contribute</li>
-			</a>
-			<a href="">
-				<li>Request early access</li>
-			</a>
- 	</nav> -->
+     
 	<nav>
 		<div>
-			<img src="asset/images/Logo.svg" alt="logo" id="logo">
+			<img src="./asset/images/Logo.svg" alt="logo" id="logo">
 			<p>
 				Open Enterprise
  			</p>
@@ -78,7 +49,7 @@
 			</a>
 		</div>
 		<div id="image-container">
-			<img src="/asset/images/Illustration.png" alt="" id="Illustration">
+			<img src="./asset/images/Illustration.png" alt="" id="Illustration">
  		</div>
 	</div>
 	<div id="paragraph">
@@ -158,14 +129,14 @@
 			<div id="apd">
 				<h6>Members</h6>
 				<div class="members">
-					<img src="/asset/images/Dillon Kydd 1.svg" alt="">
+					<img src="./asset/images/Dillon Kydd 1.svg" alt="">
 					<section>
 						<b>Dillon Kydd</b>
 						<p>100 SHARES</p>
 					</section>
 				</div>
 				<div class="members">
-				   <img src="/asset/images/Anna Olsen 1.svg" alt="">
+				   <img src="./asset/images/Anna Olsen 1.svg" alt="">
 				   <section>
 					<b>Anna Olsend</b>
 					<p>100 SHARES</p>
@@ -187,7 +158,7 @@
 			<div id="absolute-position2">
  			</div>
            <div id="jassir-div">
-			<img src="/asset/images/Jassir Jonis 1.svg" alt="">
+			<img src="./asset/images/Jassir Jonis 1.svg" alt="">
              <section>
 				<b>Jassir Jonis</b>
 				<p>Pre-seed angel investor</p>
@@ -247,7 +218,7 @@
                      <h4>3 applicants</h4>
 				<div class="grid-2-div">
 						<section>
-							<img src="/asset/images/Cover (1).svg" alt="">
+							<img src="./asset/images/Cover (1).svg" alt="">
 							<span>Jason Kwon</span>
 						</section>
 						<section>
@@ -259,7 +230,7 @@
 					  </div>
 					  <div class="grid-2-div">
 						<section>
-							<img src="/asset/images/Cover (2).svg" alt="">
+							<img src="./asset/images/Cover (2).svg" alt="">
 							<span>Alex Rose</span>
 						</section>
 						<section>
@@ -271,7 +242,7 @@
 					  </div>
 					  <div class="grid-2-div">
 						<section>
-							<img src="/asset/images/Cover (3).svg" alt="">
+							<img src="./asset/images/Cover (3).svg" alt="">
 							<span>Lizzie Ulrich</span>
 						</section>
 						<section >
@@ -284,7 +255,7 @@
 			</div>
 			<div id="grid-3" >
 				
-				<img src="/asset/images/Cover.svg" alt="">
+				<img src="./asset/images/Cover.svg" alt="">
 				<b>Alex Rose</b>
 				<p style="text-align: center;">UX Writer</p>
 				<div class="grid-div">
@@ -360,7 +331,7 @@
 			</a>
 		</div>
 		<div>
-			<img src="/asset/images/pablo-sign-in 1 1.svg" alt="">
+			<img src="./asset/images/pablo-sign-in 1 1.svg" alt="">
  		</div>
 	</div>
 	 
@@ -403,6 +374,6 @@
 				</div>
 			</div>
  	 </footer>
-	<script src="asset/js/open.js"></script>
+	<script src="./asset/js/open.js"></script>
 </body>
 </html>
